--- a/index.html
+++ b/index.html
@@ -3,162 +3,112 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Ibonarium Ecology Dashboard</title>
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<title>Ibonarium Heatmap</title>
 <style>
 body {
-    margin: 0;
-    font-family: "Courier New", monospace;
-    background: #0a0a0a;
-    color: #9fe7ff;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
+  margin:0; font-family:"Courier New", monospace; background:#0a0a0a; color:#9fe7ff;
+  display:flex; flex-direction:column; align-items:center; padding:20px;
 }
 h1 { text-align:center; margin-bottom:20px; }
-.dashboard {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-    gap: 20px;
-    width: 100%;
-    max-width: 1200px;
-}
+.heatmap { display:grid; grid-template-columns:repeat(4,200px); gap:15px; width:100%; max-width:900px; }
 .card {
-    background: rgba(0,0,0,0.7);
-    border: 1px solid #4dd2ff;
-    border-radius: 10px;
-    padding: 10px;
-    text-align: center;
+  padding:15px; border-radius:10px; text-align:center;
+  color:#000; font-weight:bold; font-size:14px; transition:0.5s;
 }
-.card h2 { font-size: 16px; margin-bottom:10px; color:#4dd2ff; }
-.card .value { font-size: 20px; margin-bottom:10px; }
-canvas { background: transparent !important; }
+.value { font-size:18px; margin-top:5px; }
+#systemStatus { margin-top:20px; font-size:20px; font-weight:bold; }
 </style>
 </head>
 <body>
-
-<h1>Ibonarium Ecology Dashboard</h1>
-
-<div class="dashboard">
-
-    <div class="card">
-        <h2>AQI (PM2.5)</h2>
-        <div class="value" id="aqi">Loading...</div>
-        <canvas id="aqiChart" width="150" height="150"></canvas>
-    </div>
-
-    <div class="card">
-        <h2>CO2 (ppm)</h2>
-        <div class="value" id="co2">Loading...</div>
-        <canvas id="co2Chart" width="150" height="150"></canvas>
-    </div>
-
-    <div class="card">
-        <h2>Метан (ppb)</h2>
-        <div class="value" id="ch4">Loading...</div>
-        <canvas id="ch4Chart" width="150" height="150"></canvas>
-    </div>
-
-    <div class="card">
-        <h2>Темп. аномалія (°C)</h2>
-        <div class="value" id="tempAnomaly">Loading...</div>
-        <canvas id="tempChart" width="150" height="150"></canvas>
-    </div>
-
-    <div class="card">
-        <h2>Активні пожежі</h2>
-        <div class="value" id="fires">Loading...</div>
-    </div>
-
-    <div class="card">
-        <h2>Повені</h2>
-        <div class="value" id="floods">Loading...</div>
-    </div>
-
-    <div class="card">
-        <h2>Землетруси >M4</h2>
-        <div class="value" id="quakes">Loading...</div>
-    </div>
-
-    <div class="card">
-        <h2>Вулкани</h2>
-        <div class="value" id="volcanoes">Loading...</div>
-    </div>
-
-    <div class="card">
-        <h2>Дефорестація (ha)</h2>
-        <div class="value" id="deforest">Loading...</div>
-    </div>
-
-    <div class="card">
-        <h2>Кислотні дощі SO2</h2>
-        <div class="value" id="so2">Loading...</div>
-    </div>
-
+<h1>Ibonarium Heatmap - Екологічний Осінт</h1>
+<div class="heatmap" id="heatmap">
+  <!-- карти створяться через JS -->
 </div>
+<div id="systemStatus">Loading...</div>
 
 <script>
-// ===================== ініціалізація графіків =====================
-const aqiCtx = document.getElementById('aqiChart').getContext('2d');
-const co2Ctx = document.getElementById('co2Chart').getContext('2d');
-const ch4Ctx = document.getElementById('ch4Chart').getContext('2d');
-const tempCtx = document.getElementById('tempChart').getContext('2d');
+const indicators = [
+  {id:'aqi', label:'AQI (PM2.5)', api:'https://api.openaq.org/v2/latest?parameter=pm25&limit=1000', value:0, thresholds:[50,100]},
+  {id:'pm10', label:'PM10', api:'https://api.openaq.org/v2/latest?parameter=pm10&limit=1000', value:0, thresholds:[50,100]},
+  {id:'co2', label:'CO2 (ppm)', api:null, value:420, thresholds:[420,450]},
+  {id:'ch4', label:'CH4 (ppb)', api:null, value:1890, thresholds:[1800,2000]},
+  {id:'temp', label:'Темп. аномалія °C', api:null, value:1.2, thresholds:[1,2]},
+  {id:'fires', label:'Активні пожежі', api:null, value:0, thresholds:[10,30]},
+  {id:'floods', label:'Повені', api:null, value:0, thresholds:[5,15]},
+  {id:'quakes', label:'Землетруси >M4', api:'https://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/4.0_hour.geojson', value:0, thresholds:[2,5]},
+  {id:'volcanoes', label:'Вулкани', api:null, value:0, thresholds:[1,3]},
+  {id:'deforest', label:'Дефорестація (ha)', api:null, value:0, thresholds:[200,500]},
+  {id:'so2', label:'SO2 (µg/m³)', api:null, value:0, thresholds:[20,50]},
+  {id:'no2', label:'NO2 (µg/m³)', api:'https://api.openaq.org/v2/latest?parameter=no2&limit=1000', value:0, thresholds:[40,80]},
+  {id:'o3', label:'O3 (µg/m³)', api:'https://api.openaq.org/v2/latest?parameter=o3&limit=1000', value:0, thresholds:[60,120]},
+  {id:'pm25-global', label:'PM2.5 глобально', api:null, value:0, thresholds:[35,55]},
+  {id:'radiation', label:'Радіаційний фон', api:null, value:0, thresholds:[0.1,0.3]},
+  {id:'humidity', label:'Вологість глобально %', api:null, value:50, thresholds:[30,70]}
+];
 
-const aqiChart = new Chart(aqiCtx, {type:'doughnut', data:{labels:['AQI',''],datasets:[{data:[0,100],backgroundColor:['#ff4d4d','#222']}],options:{rotation:-90, circumference:180, plugins:{legend:{display:false}}}});
-const co2Chart = new Chart(co2Ctx, {type:'doughnut', data:{labels:['CO2',''],datasets:[{data:[0,500],backgroundColor:['#4dd2ff','#222']}],options:{rotation:-90, circumference:180, plugins:{legend:{display:false}}}});
-const ch4Chart = new Chart(ch4Ctx, {type:'doughnut', data:{labels:['CH4',''],datasets:[{data:[0,2000],backgroundColor:['#ffaa00','#222']}],options:{rotation:-90, circumference:180, plugins:{legend:{display:false}}}});
-const tempChart = new Chart(tempCtx, {type:'doughnut', data:{labels:['ΔT',''],datasets:[{data:[0,5],backgroundColor:['#ffcc00','#222']}],options:{rotation:-90, circumference:180, plugins:{legend:{display:false}}}});
+const heatmap = document.getElementById('heatmap');
 
-// ===================== фетч ріалтайм даних =====================
-async function fetchEcoData() {
-    try {
-        // AQI + PM2.5 (OpenAQ)
-        const airRes = await fetch('https://api.openaq.org/v2/latest?parameter=pm25&limit=1000');
-        const airData = await airRes.json();
-        const pm25Values = airData.results.map(r => r.measurements[0]?.value || 0);
-        const aqiAvg = Math.round(pm25Values.reduce((a,b)=>a+b,0)/pm25Values.length);
-        document.getElementById('aqi').textContent = aqiAvg;
-        aqiChart.data.datasets[0].data[0] = aqiAvg;
-        aqiChart.data.datasets[0].data[1] = 150 - aqiAvg;
-        aqiChart.update();
-
-        // CO2 (симуляція, можна замінити на API)
-        const co2 = 420 + Math.random()*2;
-        document.getElementById('co2').textContent = co2.toFixed(1);
-        co2Chart.data.datasets[0].data[0] = co2;
-        co2Chart.data.datasets[0].data[1] = 500-co2;
-        co2Chart.update();
-
-        // CH4 (симуляція)
-        const ch4 = 1890 + Math.random()*10;
-        document.getElementById('ch4').textContent = ch4.toFixed(0);
-        ch4Chart.data.datasets[0].data[0] = ch4;
-        ch4Chart.data.datasets[0].data[1] = 2000-ch4;
-        ch4Chart.update();
-
-        // Температурна аномалія (симуляція)
-        const deltaT = 1.2 + Math.random()*0.2;
-        document.getElementById('tempAnomaly').textContent = deltaT.toFixed(1);
-        tempChart.data.datasets[0].data[0] = deltaT;
-        tempChart.data.datasets[0].data[1] = 5 - deltaT;
-        tempChart.update();
-
-        // Пожежі, повені, землетруси, вулкани (симуляція, можна інтегрувати NASA FIRMS, USGS)
-        document.getElementById('fires').textContent = Math.floor(Math.random()*50);
-        document.getElementById('floods').textContent = Math.floor(Math.random()*10);
-        document.getElementById('quakes').textContent = Math.floor(Math.random()*5);
-        document.getElementById('volcanoes').textContent = Math.floor(Math.random()*3);
-        document.getElementById('deforest').textContent = Math.floor(Math.random()*1000);
-        document.getElementById('so2').textContent = (Math.random()*10).toFixed(1);
-
-    } catch(e){ console.error('Помилка при отриманні даних', e);}
+function createCards() {
+  indicators.forEach(ind=>{
+    const div = document.createElement('div');
+    div.className='card';
+    div.id=ind.id;
+    div.innerHTML=`${ind.label}<div class="value">Loading...</div>`;
+    heatmap.appendChild(div);
+  });
 }
 
-// запуск при завантаженні + кожні 5 хв
-fetchEcoData();
-setInterval(fetchEcoData, 300000);
+function updateCard(indicator) {
+  const el = document.getElementById(indicator.id);
+  const valEl = el.querySelector('.value');
+  valEl.textContent = indicator.value;
+  if(indicator.value < indicator.thresholds[0]) el.style.backgroundColor='#4dd2ff'; // зелений
+  else if(indicator.value < indicator.thresholds[1]) el.style.backgroundColor='#ffcc00'; // жовтий
+  else el.style.backgroundColor='#ff4d4d'; // червоний
+}
 
+async function fetchData() {
+  for(const ind of indicators){
+    try{
+      if(ind.api){
+        const res = await fetch(ind.api);
+        const data = await res.json();
+        if(ind.id==='aqi'){
+          const values = data.results.map(r=>r.measurements[0]?.value||0);
+          ind.value = Math.round(values.reduce((a,b)=>a+b,0)/values.length);
+        } else if(ind.id==='pm10'){
+          const values = data.results.map(r=>r.measurements[0]?.value||0);
+          ind.value = Math.round(values.reduce((a,b)=>a+b,0)/values.length);
+        } else if(ind.id==='quakes'){
+          ind.value = data.features.length;
+        } else if(ind.id==='no2'){
+          const values = data.results.map(r=>r.measurements[0]?.value||0);
+          ind.value = Math.round(values.reduce((a,b)=>a+b,0)/values.length);
+        } else if(ind.id==='o3'){
+          const values = data.results.map(r=>r.measurements[0]?.value||0);
+          ind.value = Math.round(values.reduce((a,b)=>a+b,0)/values.length);
+        }
+      } else {
+        // симуляція для інших даних
+        ind.value = Math.round(ind.thresholds[0]*Math.random()*1.5 + ind.thresholds[0]);
+      }
+      updateCard(ind);
+    }catch(e){ console.error('Помилка fetch',ind.id,e);}
+  }
+  updateSystemStatus();
+}
+
+function updateSystemStatus(){
+  const avg = indicators.reduce((a,b)=>a+b.value,0)/indicators.length;
+  const status = document.getElementById('systemStatus');
+  if(avg<50) status.textContent='Система стабільна ✅';
+  else if(avg<100) status.textContent='Попередження ⚠️';
+  else status.textContent='Критичний стан 🚨';
+}
+
+createCards();
+fetchData();
+setInterval(fetchData,300000); // оновлення кожні 5 хв
 </script>
 </body>
 </html>
