--- a/index.html
+++ b/index.html
@@ -7,30 +7,29 @@
 <style>
 body { margin:0; font-family:"Courier New", monospace; background:#0a0a0a; color:#9fe7ff; display:flex; flex-direction:column; align-items:center; padding:20px; }
 h1 { text-align:center; margin-bottom:20px; }
-.heatmap { display:grid; grid-template-columns:repeat(2, 400px); gap:15px; width:100%; max-width:900px; }
+.heatmap { display:grid; grid-template-columns:repeat(2, 300px); gap:15px; width:100%; max-width:650px; }
 .card { padding:15px; border-radius:10px; text-align:center; color:#000; font-weight:bold; font-size:14px; transition:0.5s; }
 .value { font-size:18px; margin-top:5px; }
-#systemStatus { margin-top:20px; font-size:20px; font-weight:bold; }
+#systemStatus { margin-top:20px; font-size:20px; font-weight:bold; color:#fff; }
 </style>
 </head>
 <body>
 <h1>Ibonarium Real-Time - Екологія</h1>
 <div class="heatmap" id="heatmap"></div>
-<div id="systemStatus">Завантаження...</div>
+<div id="systemStatus">Завантаження даних...</div>
 
 <script>
+// Показники для реального ріалтайму
 const indicators = [
-  {id:'pm25', label:'PM2.5', api:'https://api.openaq.org/v2/latest?parameter=pm25&limit=1000', value:0, thresholds:[35,55]},
-  {id:'pm10', label:'PM10', api:'https://api.openaq.org/v2/latest?parameter=pm10&limit=1000', value:0, thresholds:[50,100]},
-  {id:'no2', label:'NO2', api:'https://api.openaq.org/v2/latest?parameter=no2&limit=1000', value:0, thresholds:[40,80]},
-  {id:'o3', label:'O3', api:'https://api.openaq.org/v2/latest?parameter=o3&limit=1000', value:0, thresholds:[60,120]},
-  {id:'quakes', label:'Землетруси >M4 (за годину)', api:'https://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/4.0_hour.geojson', value:0, thresholds:[2,5]},
-  {id:'volcanoes', label:'Активні вулкани', api:'https://volcano.si.edu/news/WeeklyVolcanoRSS.xml', value:0, thresholds:[1,3]},
-  {id:'fires', label:'Пожежі (NASA FIRMS)', api:'https://firms.modaps.eosdis.nasa.gov/active_fire/c6/csv/MODIS_C6_Global_24h.csv', value:0, thresholds:[10,30]}
+  {id:'pm25', label:'PM2.5', api:'https://api.openaq.org/v2/latest?parameter=pm25&limit=100', value:0, thresholds:[35,55]},
+  {id:'pm10', label:'PM10', api:'https://api.openaq.org/v2/latest?parameter=pm10&limit=100', value:0, thresholds:[50,100]},
+  {id:'no2', label:'NO2', api:'https://api.openaq.org/v2/latest?parameter=no2&limit=100', value:0, thresholds:[40,80]},
+  {id:'o3', label:'O3', api:'https://api.openaq.org/v2/latest?parameter=o3&limit=100', value:0, thresholds:[60,120]},
+  {id:'quakes', label:'Землетруси >M4 (за годину)', api:'https://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/4.0_hour.geojson', value:0, thresholds:[2,5]}
 ];
 
+// Створюємо карточки
 const heatmap = document.getElementById('heatmap');
-
 function createCards() {
   indicators.forEach(ind=>{
     const div = document.createElement('div');
@@ -41,15 +40,19 @@ function createCards() {
   });
 }
 
+// Оновлюємо карточку кольором та значенням
 function updateCard(indicator) {
   const el = document.getElementById(indicator.id);
   const valEl = el.querySelector('.value');
   valEl.textContent = indicator.value;
-  if(indicator.value < indicator.thresholds[0]) el.style.backgroundColor='#4dd2ff'; // зелений
-  else if(indicator.value < indicator.thresholds[1]) el.style.backgroundColor='#ffcc00'; // жовтий
-  else el.style.backgroundColor='#ff4d4d'; // червоний
+  if(typeof indicator.value==='number'){
+    if(indicator.value < indicator.thresholds[0]) el.style.backgroundColor='#4dd2ff'; // зелений
+    else if(indicator.value < indicator.thresholds[1]) el.style.backgroundColor='#ffcc00'; // жовтий
+    else el.style.backgroundColor='#ff4d4d'; // червоний
+  } else el.style.backgroundColor='#666'; // якщо N/A
 }
 
+// Фетчимо дані
 async function fetchData() {
   for(const ind of indicators){
     try{
@@ -62,21 +65,17 @@ async function fetchData() {
         const res = await fetch(ind.api);
         const data = await res.json();
         ind.value = data.features.length;
-      } else if(ind.id==='volcanoes'){
-        // XML feed не можна напряму парсити на GitHub Pages через CORS
-        ind.value = 'N/A';
-      } else if(ind.id==='fires'){
-        // CSV з NASA FIRMS — неможливо fetch без проксі, поки N/A
-        ind.value = 'N/A';
       }
       updateCard(ind);
-    }catch(e){ console.error('Помилка fetch',ind.id,e); ind.value='N/A'; updateCard(ind);}
+    } catch(e){ console.error('Помилка fetch',ind.id,e); ind.value='N/A'; updateCard(ind);}
   }
   updateSystemStatus();
 }
 
+// Оцінка загального стану системи
 function updateSystemStatus(){
   let numericValues = indicators.filter(i=>typeof i.value==='number').map(i=>i.value);
+  if(numericValues.length===0) {document.getElementById('systemStatus').textContent='Немає даних ❌'; return;}
   const avg = numericValues.reduce((a,b)=>a+b,0)/numericValues.length;
   const status = document.getElementById('systemStatus');
   if(avg<50) status.textContent='Система стабільна ✅';
